# llms4subjects

./: .gitignore  README.md  eval.ipynb  expt.ipynb  pyproject.toml  ruff.toml
doc/: README.md  framework.drawio
ipynb/: expt.ipynb  r3-test.ipynb  r3.ipynb  rft.ipynb  test.ipynb
llms4subjects/: TIBKAT.py  alias.py  api.py  dev.py  embedding.py  eval.py  instance.py  llm.py  make_data.py  merge.py  parse.py  prompt.py  rerank.py  rerank4test.py  score.py  simple_predict.py  sqlite.py  subject.py  test.py  translate.py  util.py
llms4subjects/predict/: __init__.py  merge.py  predict_llm.py  predict_sft.py  predict_simple.py
